--- a/mobilemenu.html
+++ b/mobilemenu.html
@@ -6,11 +6,11 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
   </center>  
+ <h1>"Hello, " + getCookie("name") + "!";</h1>
 <div class="background" id="navbar">
 <a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=200px src="money.png"></a>
 <a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=200px src="gears.png"></a>
 <a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=200px src="timage.svg"></a>
 <a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=200px src="pen.png"></a>
-<h1>"Hello, " + getCookie("name") + "!";<h1>
   </html>
    
