--- a/mobilemenu.html
+++ b/mobilemenu.html
@@ -12,6 +12,9 @@
 <a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=200px src="timage.svg"></a>
 <a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=200px src="pen.png"></a>
  </div><br><br><br><br>
-<h1>"Hello, " + getCookie("name") + "!";</h1>
+ <h1>document.getElementById('hello')</h1>
+ <script>
+document.getElementById('hello') = "Hello, " + getCookie("name") + "!";
+ </script>
   </html>
    
