--- a/mobilemenu.html
+++ b/mobilemenu.html
@@ -14,7 +14,7 @@
  </div><br><br><br><br>
  <h1>document.getElementById('hello')</h1>
  <script>
-document.getElementById('hello') = "Hello, " + getCookie("name") + "!";
+document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
  </script>
   </html>
    
