--- a/mobiledocs.html
+++ b/mobiledocs.html
@@ -11,8 +11,12 @@
  </div>
 <br><br>
 <div class="background" id="navbar">
-	<a href="mobilemenu.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
-</div><br><br><br><br><br><br>
+	<a href="mobileindex.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	<a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+	<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+	<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
+	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
+</div><br><br><br><br><br>
 <p id="view"></p>
 <div id="edit">
 	<textarea rows="24" cols="100" id="tid-text-area"></textarea><br><br>
