--- a/mobilepoints.html
+++ b/mobilepoints.html
@@ -7,9 +7,11 @@
  </div>
  <br><br>
 <div class="background" id="navbar">
-	<a href="mobilemenu.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
-	</div>
-
+	<a href="mobileindex.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	<a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+	<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+	<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
+	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
  <a href="watchads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
