--- a/mobilesettings.html
+++ b/mobilesettings.html
@@ -9,10 +9,13 @@
  </div>
 <br><br>
 <div class="background" id="navbar">
-<a href="mobilemenu"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
-	</div>
-
-</div><br><br><br><br><br><br>
+<div class="background" id="navbar">
+	<a href="mobileindex.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	<a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+	<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+	<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
+	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
+</div><br><br><br><br><br>
 	PIN
 	<input type="number" id="pin" min=1000 max=999999 placeholder="A 4 - 6 digit number." required><br>
 	Recovery Password
