--- a/mobilesettings.html
+++ b/mobilesettings.html
@@ -14,7 +14,7 @@
 	<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 	<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
-</div><br><br><br><br><br>
+</div><br><br><br><br><br><br>
 	PIN
 	<input type="number" id="pin" min=1000 max=999999 placeholder="A 4 - 6 digit number." required><br>
 	Recovery Password
