--- a/sync.html
+++ b/sync.html
@@ -20,7 +20,7 @@ function RequestSync() {
 <button onclick="RequestMobileSync()" class="base btn">Sync to mobile!</button>
 <script>
 function RequestMobileSync() {
-	window.location.href = "mobilemenu.html"
+	window.location.href = "mobileindex.html"
 }
 	</script>
 <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
