--- a/mobileindex.html
+++ b/mobileindex.html
@@ -32,6 +32,20 @@
 	</div><br><br><br><br><br>
  </body>
 <h1 id="hello">Hello!</h1>
+<p id="modpanelnotice"></p>
+<div style="background-color:white;">
+<img width=175px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
+ <img width=150px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
+ <img width=215px src="http://i258.photobucket.com/albums/hh259/kaspernova/84PCS-Pink.jpg">
+ <img width=95px src="https://upload.wikimedia.org/wikipedia/commons/8/89/PLT-SHH1.jpg">
+ <img width=85px src="http://tiplanet.org/forum/gallery/image.php?album_id=15&image_id=273&view=no_count">
+ <img width=190px src="http://s7d1.scene7.com/is/image/officedepot/905739_scene7?$OD-Dynamic$&wid=450&hei=450">
+ <img width=190px src="http://www.staples-3p.com/s7/is/image/Staples/m000916946_sc7?$splssku$"><br>
+ <img id="89" src="http://ti.zewaren.net/en/images/calc-ti89.gif">
+ <a href="https://www.ocf.berkeley.edu/~pad/emu/v11.html"><img id="92plus" src="http://www.ticalc.org/images/calcs/92plus-big.gif"></a>
+ <img id="nspirecxcas" width="200px" src="https://images-na.ssl-images-amazon.com/images/I/71xGnSqQUsL._SY679_.jpg">
+ <img id="84plusce" width="200px" src="https://images-na.ssl-images-amazon.com/images/G/01/aplusautomation/vendorimages/0e74993e-8b04-4f99-a980-2437ad5c0728.jpg._CB283769908__SR150,300_.jpg">
+	</div>
 <style>
 	#bottomlogin {
 		font-size: 18px;
@@ -151,5 +165,11 @@ function checkPass() {
 	   }
 	   }
  }
+	function logOut() {
+ delete_cookie("login");
+ delete_cookie("gotsettings");
+ document.cookie = "post=true";
+ window.location.href = "sync.html";
+}
  </script>
 </html>
