--- a/mobileindex.html
+++ b/mobileindex.html
@@ -31,7 +31,7 @@
 	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 	</div><br><br><br><br><br>
  </body>
-<h1 id="hello">Hello!</h1>
+<h1 id="hello">Hello!</h1><button onclick="logOut()" class="base btn">Log Out</button>
 <p id="modpanelnotice"></p>
 <div style="background-color:white;">
 <img width=175px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
