--- a/mobiledocs.html
+++ b/mobiledocs.html
@@ -16,7 +16,7 @@
 	<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 	<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
-</div><br><br><br><br><br>
+</div><br><br><br><br><br><br>
 <p id="view"></p>
 <div id="edit">
 	<textarea rows="24" cols="100" id="tid-text-area"></textarea><br><br>
