--- a/news.html
+++ b/news.html
@@ -18,8 +18,8 @@
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
 
 </div><br><br><br><br><br><br>
-	<b>We are now working on a new mobile site!</b> - <a href="proudloyaltier.github.io/mobileindex.html">Visit it here!</a><br>
-	<b>TiDocs are here!</b> - create and save personal documents!<br>
+	<b>We are now working on a new mobile site!</b> - <a href="proudloyaltier.github.io/mobileindex.html">Visit it here!</a><br><br>
+	<b>TiDocs are here!</b> - create and save personal documents!<br><br>
  </center>
  </body>
 </html>
