--- a/mobiledocs.html
+++ b/mobiledocs.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width">
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
@@ -16,10 +15,10 @@
 	<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 	<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
-</div><br><br><br><br><br><br><br><br>
+</div><br><br><br><br><br><br>
 <p id="view"></p>
 <div id="edit">
-	<textarea rows="24" cols="75" id="tid-text-area"></textarea><br><br>
+	<textarea rows="24" cols="100" id="tid-text-area"></textarea><br><br>
 	
 		
 	<button class="base btn2" onclick="saveDocument();">Save Document</button>
