--- a/mobileindex.html
+++ b/mobileindex.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html>
-<title>TiMedia</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<body>
-<center>
-<div class="top">
- <h2 style="color:white;">TiMedia</h2>
- </div>
-<br><br>
-<div class="background" id="navbar">
-	<a href="mobileindex.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
-	<a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
-	<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
-	<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
-	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
-</div><br><br><br><br><br><br>
-<h1>Welcome to TiMedia!</h1>
-<h2>Your data is safe!</h2>
-<h4>Your documents are encrypted end to end, your data (like documents,messages,store purchases and more) is not visible to any admin or other user!</h4>
-<h4>While on this site, do not harass any other member or engage in any illegal or unkind activity. Make sure to contact admins hymenopus, graphinghandheld and neil about violations of the following!</h4>
-</body>
+  <title>TiMedia</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<body>
+		<center>
+		<div class="top">
+		 <h2 style="color:white;">TiMedia</h2>
+		 </div>
+		<br><br>
+		<div class="background" id="navbar">
+			<a href="mobileindex.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+			<a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+			<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+			<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
+			<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
+		</div><br><br><br><br>
+			<a href="mobilepoints.html">loading . . .</a>
+			<br><br>
+		<h1>Welcome to TiMedia!</h1>
+		<h2>Your data is safe!</h2>
+		<h4>Your documents are encrypted end to end, your data (like documents,messages,store purchases and more) is not visible to any admin or other user!</h4>
+		<h4>While on this site, do not harass any other member or engage in any illegal or unkind activity. Make sure to contact admins hymenopus, graphinghandheld and neil about violations of the following!</h4>
+  </body>
+  <script>
+	if (localStorage.points == undefined) {
+	 localStorage.setItem("points", 0);
+	}
+	if (localStorage.purchases == undefined) {
+			localStorage.purchases = "";
+	}
+
+	document.getElementById('balance').innerHTML = localStorage.points + " TiPoints";
+  </script>
 </html>
