--- a/mobileindex.html
+++ b/mobileindex.html
@@ -15,7 +15,7 @@
 			<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 			<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 		</div><br><br><br><br>
-			<a href="mobilepoints.html">loading . . .</a>
+			<a href="mobilepoints.html" id="balance" style="textAllign:right;">loading . . .</a>
 			<br><br>
 		<h1>Welcome to TiMedia!</h1>
 		<h2>Your data is safe!</h2>
