--- a/mobileindex.html
+++ b/mobileindex.html
@@ -14,9 +14,8 @@
 			<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 			<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 			<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
-		</div><br><br><br><br>
+		</div><br><br><br><br><br><br>
 			<a href="mobilepoints.html" id="balance" style="textAllign:right;">loading . . .</a>
-			<br><br>
 		<h1>Welcome to TiMedia!</h1>
 		<h2>Your data is safe!</h2>
 		<h4>Your documents are encrypted end to end, your data (like documents,messages,store purchases and more) is not visible to any admin or other user!</h4>
