--- a/mobileindex.html
+++ b/mobileindex.html
@@ -21,6 +21,11 @@
 		<h4>Your documents are encrypted end to end, your data (like documents,messages,store purchases and more) is not visible to any admin or other user!</h4>
 		<h4>While on this site, do not harass any other member or engage in any illegal or unkind activity. Make sure to contact admins hymenopus, graphinghandheld and neil about violations of the following!</h4>
   </body>
+  <style>
+		#balance {
+			text-align:right;
+		};
+	</style>
   <script>
 	if (localStorage.points == undefined) {
 	 localStorage.setItem("points", 0);
