--- a/mobilepoints.html
+++ b/mobilepoints.html
@@ -15,14 +15,6 @@
 <h1 id="balance">Loading...</h1>
  <a href="watchads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
  <a href="redeem2.html"><button class="base btn">Redeem a Gift Card</button></a>
- <!--<h3>Earn points by pledging TI!</h3>
- <img width=400px id="pledgeimg" src="http://i.imgur.com/QxFCwIN.png"><br>
- <input type="text" id="pledge" placeholder="Type the pledge here."><br>-->
- <h3>Store</h3>
-<img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
-<img onclick="buyLimited();" width=200px src="http://i.imgur.com/HgtzdrF.png">
-<img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png"><br>
-<span style="color:red;">Going offsale soon!</span>
 	<div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=50&ts=1495572466451");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
@@ -44,7 +36,7 @@ function getCookie(cname) {
     return "0";
 }
  
-function buyVit() {
+<!--function buyVit() {
 if (localStorage.purchases.includes("!!isvit:true!!")) {
  alert("Already purchased.");
 } else {
@@ -103,7 +95,7 @@ function checkPledge() {
   alert("Thank you pledging! You've been rewarded 5 TiPoints!");
   location.reload();
  }
- }
+ }-->
  
 if (localStorage.points == undefined) {
  localStorage.setItem("points", 0);
