--- a/mobilepoints.html
+++ b/mobilepoints.html
@@ -36,7 +36,7 @@ function getCookie(cname) {
     return "0";
 }
  
-<!--function buyVit() {
+function buyVit() {
 if (localStorage.purchases.includes("!!isvit:true!!")) {
  alert("Already purchased.");
 } else {
@@ -95,7 +95,7 @@ function checkPledge() {
   alert("Thank you pledging! You've been rewarded 5 TiPoints!");
   location.reload();
  }
- }-->
+ }
  
 if (localStorage.points == undefined) {
  localStorage.setItem("points", 0);
