--- a/mobileindex.html
+++ b/mobileindex.html
@@ -15,7 +15,8 @@
 			<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 		</div><br><br><br><br><br><br>
 		<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding0px;" width=40px src="gears.png" align="left"></a>
-	  <p align="right"><a href="mobilepoints.html" id="balance">loading . . .</a></p><h1>Welcome to TiMedia!</h1>
+	  <p align="right"><a href="mobilepoints.html" id="balance">loading . . .</a></p>
+		<h1>Welcome to TiMedia!</h1>
 		<h2>Your data is safe!</h2>
 		<h4>Your documents are encrypted end to end, your data (like documents,messages,store purchases and more) is not visible to any admin or other user!</h4>
 		<h4>While on this site, do not harass any other member or engage in any illegal or unkind activity. Make sure to contact admins hymenopus, graphinghandheld and neil about violations of the following!</h4>
