--- a/createbutton.html
+++ b/createbutton.html
@@ -16,9 +16,9 @@
 	<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="docs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
-</div><br><br><br><br><br>
+</div><br><br><br><br><br><br><br>
 
-<input type="text" id="price" placeholder="Price"><br>
+<input type="text" id="price" placeholder="Cost"><br>
 <textarea id="code" placeholder="JavaScript code (this will run after the user has completed the purchase)."></textarea>
 
 <script>
