--- a/createbutton.html
+++ b/createbutton.html
@@ -18,8 +18,9 @@
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
 </div><br><br><br><br><br><br><br>
 
-<input type="text" id="price" placeholder="Cost"><br>
-<textarea id="code" placeholder="JavaScript code (this will run after the user has completed the purchase)."></textarea>
+<input type="text" id="price" placeholder="Cost (TiPoints)"><br>
+<textarea id="code" placeholder="JavaScript code (this will run after the user has completed the purchase)."></textarea><br>
+<button class="base btn2" onclick="generate();">Create</button>
 
 <script>
 function generate() {
