--- a/sync.html
+++ b/sync.html
@@ -8,21 +8,8 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br><br><br><br>
-	<img draggable=false src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif">
+	<img draggable="false" src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif">
  </center>
- <button onclick="RequestSync()" class="base btn">Request Fast Sync</button>
-<script>
-function RequestSync() {
-	window.location.href = "index.html"
-}
-	</script>
-	<br>
-<button onclick="RequestMobileSync()" class="base btn">Sync to mobile!</button>
-<script>
-function RequestMobileSync() {
-	window.location.href = "mobileindex.html"
-}
-	</script>
 <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10000000&ts=1495665618881");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
@@ -72,7 +59,11 @@ function removeTag() {
 }
 	
 function goHomePage() {
-	window.location.href = "index.html";	
+	if (getCookie("mobile") == true) {
+		window.location.href = "mobileindex.html";
+	} else {
+		window.location.href = "index.html";
+	}
 }
 
 setInterval(removeTag, 0);
