--- a/points.html
+++ b/points.html
@@ -22,7 +22,7 @@
  <!--<h3>Earn points by pledging TI!</h3>
  <img width=400px id="pledgeimg" src="http://i.imgur.com/QxFCwIN.png"><br>
  <input type="text" id="pledge" placeholder="Type the pledge here."><br>-->
- <h3>Store</h3>
+ <!--<h3>Store</h3>
 <!--<img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
 <img onclick="buyLimited();" width=200px src="http://i.imgur.com/HgtzdrF.png">
 <img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png"><br>
