--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
  <button onclick="logOut()" class="base btn">Log Out</button>
  </div>
 <div id="content" style="visibility:hidden;">
-<div class="background" id="navbar">
-	<a href="index.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
-	<a href="news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
-	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
-	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
-	<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
-	<a href="docs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
-	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
-</div><br><br><br><br><br>
+<input class="burger-check" id="burger-check" type="checkbox"><label for="burger-check" class="burger"></label>
+<nav id="navigation1" class="navigation">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="news.html">News</a></li>
+    <li><a href="points.html">Points</a></li>
+    <li><a href="settings.html">Settings</a></li>
+    <li><a href="messages.html">Messages</a></li>
+    <li><a href="docs.html">Documents</a></li>
+	 <li><a href="programs.html">Programs</a></li>
+  </ul>
+</nav>
+<br><br><br><br><br>
  <h1 id="hello">Hello!</h1><button onclick="logOut()" class="base btn">Log Out</button>
 <p id="modpanelnotice"></p>
 <div style="background-color:white;">
