--- a/app.html
+++ b/app.html
@@ -19,14 +19,16 @@
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
 </div><br><br><br><br><br><br><br>
 
-<textarea id="html" placeholder="HTML code"></textarea><br>
-<textarea id="css" placeholder="CSS code"></textarea><br>
-<textarea id="js" placeholder="JavaScript code"></textarea><br>
-Apps cost 99 TiPoints to create.<br>
-<iframe frameBorder="0" width="200px" height="115px" src="https://proudloyaltier.github.io/timedia/tipay-button.html?pd=OTkhIUBARU5EVElQQVlFTlRSWUBAISF3aW5kb3cuY3JlYXRlKCk7"><p>Your browser does not support TiPay.</p></iframe>
+<div id="create">
+	<textarea id="html" placeholder="HTML code"></textarea><br>
+	<textarea id="css" placeholder="CSS code"></textarea><br>
+	<textarea id="js" placeholder="JavaScript code"></textarea><br>
+	Apps cost 99 TiPoints to create.<br>
+	<iframe frameBorder="0" width="200px" height="115px" src="https://proudloyaltier.github.io/timedia/tipay-button.html?pd=OTkhIUBARU5EVElQQVlFTlRSWUBAISF3aW5kb3cuY3JlYXRlKCk7"><p>Your browser does not support TiPay.</p></iframe>
+</div>
 
 <script>
-var _0xfe22=["\x59\x6F\x75\x72\x20\x61\x70\x70\x20\x6C\x69\x6E\x6B\x3A","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x70\x72\x6F\x75\x64\x6C\x6F\x79\x61\x6C\x74\x69\x65\x72\x2E\x67\x69\x74\x68\x75\x62\x2E\x69\x6F\x2F\x74\x69\x6D\x65\x64\x69\x61\x2F\x61\x70\x70\x2E\x68\x74\x6D\x6C\x3F\x63\x3D","\x76\x61\x6C\x75\x65","\x68\x74\x6D\x6C","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x25\x3C\x40\x40\x21\x21\x20\x43\x4F\x44\x45\x45\x4E\x54\x52\x59\x20\x21\x21\x40\x40\x3E\x3E\x25","\x63\x73\x73","\x6A\x73"];function create(){prompt(_0xfe22[0],_0xfe22[1]+ btoa(document[_0xfe22[4]](_0xfe22[3])[_0xfe22[2]]+ _0xfe22[5]+ document[_0xfe22[4]](_0xfe22[6])[_0xfe22[2]]+ _0xfe22[5]+ document[_0xfe22[4]](_0xfe22[7])[_0xfe22[2]]))}
+var _0x4579=["\x73\x75\x62\x73\x74\x72\x69\x6E\x67","\x73\x65\x61\x72\x63\x68","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x26","\x73\x70\x6C\x69\x74","\x6C\x65\x6E\x67\x74\x68","\x3D","\x59\x6F\x75\x72\x20\x61\x70\x70\x20\x6C\x69\x6E\x6B\x3A","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x70\x72\x6F\x75\x64\x6C\x6F\x79\x61\x6C\x74\x69\x65\x72\x2E\x67\x69\x74\x68\x75\x62\x2E\x69\x6F\x2F\x74\x69\x6D\x65\x64\x69\x61\x2F\x61\x70\x70\x2E\x68\x74\x6D\x6C\x3F\x63\x3D","\x76\x61\x6C\x75\x65","\x68\x74\x6D\x6C","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x25\x3C\x40\x40\x21\x21\x20\x43\x4F\x44\x45\x45\x4E\x54\x52\x59\x20\x21\x21\x40\x40\x3E\x3E\x25","\x63\x73\x73","\x6A\x73","\x70","\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x61\x70\x70\x2D\x68\x74\x6D\x6C","\x73\x74\x79\x6C\x65"];function getQueryVariable(_0x6d6ex2){var _0x6d6ex3=window[_0x4579[2]][_0x4579[1]][_0x4579[0]](1);var _0x6d6ex4=_0x6d6ex3[_0x4579[4]](_0x4579[3]);for(var _0x6d6ex5=0;_0x6d6ex5< _0x6d6ex4[_0x4579[5]];_0x6d6ex5++){var _0x6d6ex6=_0x6d6ex4[_0x6d6ex5][_0x4579[4]](_0x4579[6]);if(_0x6d6ex6[0]== _0x6d6ex2){return _0x6d6ex6[1]}};return (false)}function create(){prompt(_0x4579[7],_0x4579[8]+ btoa(document[_0x4579[11]](_0x4579[10])[_0x4579[9]]+ _0x4579[12]+ document[_0x4579[11]](_0x4579[13])[_0x4579[9]]+ _0x4579[12]+ document[_0x4579[11]](_0x4579[14])[_0x4579[9]]))}if(getQueryVariable(_0x4579[15])!== false){var queryVariables=getQueryVariable(_0x4579[15]);document[_0x4579[11]](_0x4579[17])[_0x4579[16]]= queryVariables[0];document[_0x4579[11]](_0x4579[18])[_0x4579[16]]= queryVariables[1];eval(queryVariables[2])}
 </script>
 
 </center>
