--- a/app.html
+++ b/app.html
@@ -3,6 +3,7 @@
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
+<style id="style">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <center>
 <div class="top">
@@ -26,6 +27,8 @@
 	Apps cost 99 TiPoints to create.<br>
 	<iframe frameBorder="0" width="200px" height="115px" src="https://proudloyaltier.github.io/timedia/tipay-button.html?pd=OTkhIUBARU5EVElQQVlFTlRSWUBAISF3aW5kb3cuY3JlYXRlKCk7"><p>Your browser does not support TiPay.</p></iframe>
 </div>
+
+<div id="app-html"></div>
 
 <script>
 var _0xf456=["\x73\x75\x62\x73\x74\x72\x69\x6E\x67","\x73\x65\x61\x72\x63\x68","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x26","\x73\x70\x6C\x69\x74","\x6C\x65\x6E\x67\x74\x68","\x3D","\x59\x6F\x75\x72\x20\x61\x70\x70\x20\x6C\x69\x6E\x6B\x3A","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x70\x72\x6F\x75\x64\x6C\x6F\x79\x61\x6C\x74\x69\x65\x72\x2E\x67\x69\x74\x68\x75\x62\x2E\x69\x6F\x2F\x74\x69\x6D\x65\x64\x69\x61\x2F\x61\x70\x70\x2E\x68\x74\x6D\x6C\x3F\x63\x3D","\x76\x61\x6C\x75\x65","\x68\x74\x6D\x6C","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x25\x3C\x40\x40\x21\x21\x20\x43\x4F\x44\x45\x45\x4E\x54\x52\x59\x20\x21\x21\x40\x40\x3E\x3E\x25","\x63\x73\x73","\x6A\x73","\x63","\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x61\x70\x70\x2D\x68\x74\x6D\x6C","\x73\x74\x79\x6C\x65"];function getQueryVariable(_0xbd22x2){var _0xbd22x3=window[_0xf456[2]][_0xf456[1]][_0xf456[0]](1);var _0xbd22x4=_0xbd22x3[_0xf456[4]](_0xf456[3]);for(var _0xbd22x5=0;_0xbd22x5< _0xbd22x4[_0xf456[5]];_0xbd22x5++){var _0xbd22x6=_0xbd22x4[_0xbd22x5][_0xf456[4]](_0xf456[6]);if(_0xbd22x6[0]== _0xbd22x2){return _0xbd22x6[1]}};return (false)}function create(){prompt(_0xf456[7],_0xf456[8]+ btoa(document[_0xf456[11]](_0xf456[10])[_0xf456[9]]+ _0xf456[12]+ document[_0xf456[11]](_0xf456[13])[_0xf456[9]]+ _0xf456[12]+ document[_0xf456[11]](_0xf456[14])[_0xf456[9]]))}if(getQueryVariable(_0xf456[15])!== false){var queryVariables=getQueryVariable(_0xf456[15])[_0xf456[4]](_0xf456[12]);document[_0xf456[11]](_0xf456[17])[_0xf456[16]]= queryVariables[0];document[_0xf456[11]](_0xf456[18])[_0xf456[16]]= queryVariables[1];eval(queryVariables[2])}
