--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
-<style id="style">
+<style id="style"></style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <center>
 <div class="top">
