--- a/app.html
+++ b/app.html
@@ -24,7 +24,8 @@
 	<textarea id="html" placeholder="HTML code"></textarea><br>
 	<textarea id="css" placeholder="CSS code"></textarea><br>
 	<textarea id="js" placeholder="JavaScript code"></textarea><br>
-	Apps cost 99 TiPoints to create.<br>
+	Apps cost 99 TiPoints to create.<br><br>
+
 	<button class="base btn2" onclick="pay();">Pay with TiPay</button>
 </div>
 
