--- a/points.html
+++ b/points.html
@@ -14,6 +14,7 @@
 	<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="docs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
+	<a href="createbutton.html"><img draggable=false id="tipay-icon" style="padding:50px;" width=50px src="tipay.png"></a>
 
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
