--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="access" style="padding:35px;">
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
- <button class="base btn" onclick="checkPass()">Login!</button>
+ <button class="base btn" onclick="checkPass()">Login!</button><br>
  <a href="sync_google.html"><img src="https://developers.google.com/identity/images/btn_google_signin_light_normal_web.png"></a>
  <p id="bottomlogin">Don't have a login? Request one <a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform"><b>here.</b></a><!-- <br> Not sure you want to sign up? This <a href="check-out-ti-home.html">informational page</a> will show you TiMedia's functions, and the benefits of becoming a user!</p> -->
  <p id="bottomlogin" onclick="forgotPassword();">Forgot password?</p>
