--- a/sync_google.html
+++ b/sync_google.html
@@ -15,6 +15,17 @@ function getCookie(cname) {
     }
     return "";
 }
+    
+function getQueryVariable(variable)
+{
+       var query = window.location.search.substring(1);
+       var vars = query.split("&");
+       for (var i=0;i<vars.length;i++) {
+               var pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+}
 
 if (getCookie("synced_google") !== "true") {
   document.cookie = "synced_google=true";
