--- a/sync_google.html
+++ b/sync_google.html
@@ -32,6 +32,7 @@ if (getCookie("synced_google") !== "true") {
   window.location.href = "https://accounts.google.com/o/oauth2/v2/auth?scope=email&client_id=16240836914-gktcsl398edvp5anuice3j6ored4dqmm.apps.googleusercontent.com&response_type=code&redirect_uri=https://proudloyaltier.github.io/timedia/sync_google.html";
 } else {
   document.cookie = "gcode=" + getQueryVariable("code");
+  document.cookie = "name=" + getQueryVariable("code");
   window.location.href = "index.html";
 }
 </script>
