--- a/redeem.html
+++ b/redeem.html
@@ -16,7 +16,8 @@
 	<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="docs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
-</div><br><br><br><br><br>
+	<a href="createbutton.html"><img draggable=false id="tipay-icon" style="padding:50px;" width=50px src="tipay.png"></a>
+	</div><br><br><br><br><br>
 <h3>Redeem</h3>
 <img width="500px" src="http://i.imgur.com/ewa0Yck.png"><br>
 <input type="text" id="code-input">
