--- a/watchads.html
+++ b/watchads.html
@@ -16,7 +16,8 @@
 	<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="docs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
-</div><br><br><br><br><br>
+	<a href="createbutton.html"><img draggable=false id="tipay-icon" style="padding:50px;" width=50px src="tipay.png"></a>
+	</div><br><br><br><br><br>
   <h3>Watch Ads to Earn TiPoints!</h3>
 	<p><b>Disclaimer: </b>We are not responsible for any damage or harm done to anything. Some ads may link to viruses. If it says that you have an outdated browser or that 'your download is ready'.<br />Do <b><i>not click it!</i></b> in the top right corner there will be a countdown. When it's over there will be a yellow 'skip ad'button. Click it to recieve your Ti Points.<br />If you love TI wait a while before you click it.</p><br>
 	<a href="http://microify.com/1zrV"><button class="base btn">Earn 10 TiPoints</button></a><br>
