--- a/mobilepoints.html
+++ b/mobilepoints.html
@@ -13,8 +13,8 @@
 	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
- <a href="watchads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
- <a href="redeem2.html"><button class="base btn">Redeem a Gift Card</button></a>
+ <a href="mobileads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
+ <a href="mobileredeem.html"><button class="base btn">Redeem a Gift Card</button></a>
 	<div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=50&ts=1495572466451");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
