--- a/mobileredeem.html
+++ b/mobileredeem.html
@@ -14,7 +14,7 @@
 	<a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
-	</div><br><br><br><br><br>
+	</div><br><br><br><br><br><br>
 <h3>Redeem</h3>
 <img width="500px" src="http://i.imgur.com/ewa0Yck.png"><br>
 <input type="text" id="code-input">
