--- a/mobilepoints.html
+++ b/mobilepoints.html
@@ -17,7 +17,7 @@
 	<br>
 	<a href="mobilebutton.html"><button class="base btn">Create a TiPay button</button></a>
 	<br><br>
-	<a href="mobileapp.html"><button class="base btn"><Create an app!</button></a>
+	 <a href="mobileapp.html"><button class="base btn">Create your own app!</button></a>
 	<br>
 	<div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
