--- a/app.html
+++ b/app.html
@@ -21,9 +21,9 @@
 </div><br><br><br><br><br><br><br>
 
 <div id="create">
-	<textarea id="html" placeholder="HTML code"></textarea><br>
-	<textarea id="css" placeholder="CSS code"></textarea><br>
-	<textarea id="js" placeholder="JavaScript code"></textarea><br>
+	<textarea id="html" onkeyup="check(this);" placeholder="HTML code"></textarea><br>
+	<textarea id="css" onkeyup="check(this);" placeholder="CSS code"></textarea><br>
+	<textarea id="js" onkeyup="check(this);" placeholder="JavaScript code"></textarea><br>
 	Apps cost 99 TiPoints to create.<br><br>
 
 	<button class="base btn2" onclick="pay();">Pay with TiPay</button>
