--- a/points.html
+++ b/points.html
@@ -20,6 +20,7 @@
 <h1 id="balance">Loading...</h1>
  <a href="watchads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
  <a href="redeem.html"><button class="base btn">Redeem a Gift Card</button></a>
+ <a href="app.html"><button class="base btn">Make you own app!</button></a>
  <!--<h3>Earn points by pledging TI!</h3>
  <img width=400px id="pledgeimg" src="http://i.imgur.com/QxFCwIN.png"><br>
  <input type="text" id="pledge" placeholder="Type the pledge here."><br>-->
