--- a/points.html
+++ b/points.html
@@ -14,13 +14,15 @@
 	<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
 	<a href="docs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
-	<a href="createbutton.html"><img draggable=false id="tipay-icon" style="padding:50px;" width=50px src="tipay.png"></a>
-
+	
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
  <a href="watchads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
  <a href="redeem.html"><button class="base btn">Redeem a Gift Card</button></a>
+<br>
  <a href="app.html"><button class="base btn">Make you own app!</button></a>
+<br>
+<a href="createbutton.html"><button class="base btn">Make a TiPay button!</button></a>
  <!--<h3>Earn points by pledging TI!</h3>
  <img width=400px id="pledgeimg" src="http://i.imgur.com/QxFCwIN.png"><br>
  <input type="text" id="pledge" placeholder="Type the pledge here."><br>-->
