--- a/points.html
+++ b/points.html
@@ -17,6 +17,7 @@
 	
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
+	<img draggable=false id="mobile-tiwallet-icon" width 350px src="64x64.png"</img>
  <a href="watchads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
  <a href="redeem.html"><button class="base btn">Redeem a Gift Card</button></a>
 <br>
