--- a/mobilepoints.html
+++ b/mobilepoints.html
@@ -13,7 +13,7 @@
 	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
-<img draggable=false id="mobile-tiwallet-icon" width=250px src="64x64"</img>
+<img draggable=false id="mobile-tiwallet-icon" width=250px src="64x64.png"</img>
 <br>
  <a href="mobileredeem.html"><button class="base btn">Redeem a Gift Card</button></a>
 <br>
