--- a/mobileindex.html
+++ b/mobileindex.html
@@ -30,5 +30,6 @@
 	  }
 		
 	  document.getElementById('balance').innerHTML = localStorage.points + " TiPoints   ";
+	  document.cookie = "mobile=true"
   </script>
 </html>
