--- a/mobilepoints.html
+++ b/mobilepoints.html
@@ -13,6 +13,7 @@
 	<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
+	<img width=250px src="https://d30y9cdsu7xlg0.cloudfront.net/png/199642-200.png"</img>
  <a href="mobileredeem.html"><button class="base btn">Redeem a Gift Card</button></a>
 <br>
 <a href="mobilebutton.html"><button class="base btn">Create a TiPay button</button></a>
