--- a/appstore.html
+++ b/appstore.html
@@ -17,8 +17,9 @@
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
 </div><br><br><br><br><br><br>
 <h1>App Store</h1>
-<h2>Purchases</h2>
-
+<br>
+<a href="programs.html"><img draggable="false" id="archives-icon" style="padding:50px;" width="50px" src="if_downloads_309074.png"></a>
+	<h4>Ti calculator programs</h4>
  </center>
  </body>
 </html>
