--- a/appstore.html
+++ b/appstore.html
@@ -17,6 +17,7 @@
 	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
 </div><br><br><br><br><br><br>
 <h1>App Store</h1>
+<a href="app.html"><button class="base btn">Make you own app!</button></a>
 <br>
 <a href="programs.html"><img draggable="false" id="archives-icon" style="padding:0px;" width="85px" src="if_downloads_309074.png"></a>
 	<h4>Ti calculator programs</h4>
