--- a/appstore.html
+++ b/appstore.html
@@ -19,6 +19,7 @@
 <h1>App Store</h1>
 <a href="app.html"><button class="base btn">Make you own app!</button></a>
 <br>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSffR2XxWqLNtOqPgVcLJSRDt8t8MA3upmJ6xInjBH2VTDRkPQ/viewform?usp=sf_link"><button class=base btn">Submit an app to the store</button></a>
  </center>
  </body>
 </html>
