--- a/points.html
+++ b/points.html
@@ -17,12 +17,11 @@
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
  <a href="watchads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
-	<a href="appstore.html"><img src="https://imgur.com/a/BHSQg.png"></a><br>
+ <a href="appstore.html"><img src="https://imgur.com/a/BHSQg"></a><br>
  <a href="redeem.html"><button class="base btn">Redeem a Gift Card</button></a>
 <br>
 <a href="createbutton.html"><button class="base btn">Make a TiPay button!</button></a>
 <br>
- <a href="watchads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
  <!--<h3>Earn points by pledging TI!</h3>
  <img width=400px id="pledgeimg" src="http://i.imgur.com/QxFCwIN.png"><br>
  <input type="text" id="pledge" placeholder="Type the pledge here."><br>-->
