--- a/points.html
+++ b/points.html
@@ -17,7 +17,7 @@
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1>
  <a href="watchads.html"><img src="http://i.imgur.com/2aVK3kw.png"></a><br>
- <a href="appstore.html"><img src="apple_app_store-512.png"></a><br>
+ <a href="appstore.html"><img width=100 src="apple_app_store-512.png"></a><br>
  <a href="redeem.html"><button class="base btn">Redeem a Gift Card</button></a>
 <br>
 <a href="createbutton.html"><button class="base btn">Make a TiPay button!</button></a>
