--- a/mobilepoints.html
+++ b/mobilepoints.html
@@ -15,7 +15,7 @@
 <h1 id="balance">Loading...</h1>
 	<img width=250px src="https://d30y9cdsu7xlg0.cloudfront.net/png/199642-200.png"</img>
 	<br>
-	<a href="appstore.html"><img width=100 src="apple_app_store-512.png"></a><br>
+	<a href="mobileappstore.html"><img width=100 src="apple_app_store-512.png"></a><br>
  <a href="mobileredeem.html"><button class="base btn">Redeem a Gift Card</button></a>
 <br>
 <a href="mobilebutton.html"><button class="base btn">Create a TiPay button</button></a>
