--- a/appstore.html
+++ b/appstore.html
@@ -21,7 +21,9 @@
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSffR2XxWqLNtOqPgVcLJSRDt8t8MA3upmJ6xInjBH2VTDRkPQ/viewform?usp=sf_link"><button class="base btn">Submit an app to the store</button></a>
 </center>
-<div align="left">
+<br>
+<br>
+<div align="center">
 <h4> Random Number generator!</h4>
 <button class="base btn" onclick="buyGenerator()">Buy for 25 TIPoints per use</button>
 </div>
